<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Activity</string>
    <string name="app_string">Bree\'s Mini Note Keeper</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_course">Courses</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="nav_share_message">Share as much as you like boo</string>
    <string name="nav_send_messgae">Sending a new message</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Notification Preferences -->
    <string name="notification_header">Notification</string>

    <!-- General Preferences -->
    <string name="fav_social_default">https://www.facebook.com/</string>
    <string name="email_default">YourEmail@yourhost.com</string>
    <string name="name_default">Your Name</string>
    <string name="general_header">General</string>
    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="fav_socials_title">Favourite Social Networks</string>
</resources>
