<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: "key" is where the preference system store values for the preference
    and used as a reference for interaction in source code. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/name_default"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        app:useSimpleSummaryProvider="true"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:defaultValue="@string/email_default"
        android:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true"/>

    <!-- NOTE: useSimpleSummary binds the values of the summary i.e updates the values -->
    <ListPreference
        android:defaultValue="@string/fav_social_default"
        android:entries="@array/fav_social_entries"
        android:entryValues="@array/fav_social_values"
        android:key="user_favorite_social"
        android:title="@string/fav_socials_title"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>